<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tituloConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:paddingRight="10dip"
        android:text="Formulario de Reporte"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.63"
            android:text="@string/incidenteUbicacion"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/ubicacionSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/incidenteUbicacionAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/incidenteUbicacionAct" />

            <RadioButton
                android:id="@+id/incidenteUbicacionMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incidenteUbicacionMapa" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="112dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/incidenteTipo"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerTipos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_weight="9205.61"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/incidenteHora"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/incidenteHora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_weight="15466.26"
        android:gravity="center_vertical|bottom"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="103dp"
            android:layout_weight="0.33" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/btnSiguiente" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/btnCancelar" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_weight="98751.38"
        android:gravity="bottom"
        android:orientation="horizontal" >

    </LinearLayout>

    <Button
        android:id="@+id/Panico"
        android:layout_width="wrap_content"        
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:background="#ff0000"
        android:text="@string/btn_panico"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>