<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.MapFragment" />

        <Button
            android:id="@+id/Panico"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#ff0000"
            android:text="@string/btn_panico"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancelar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSiguiente"
            android:layout_alignBottom="@+id/btnSiguiente"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnSiguiente"
            android:background="#cccccc"
            android:text="@string/btnCancelar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSiguiente"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#cccccc"
            android:text="@string/btnSiguiente"
            android:textSize="20sp" />

    </RelativeLayout>

</TableLayout>